fix on mobile

--- a/style.css
+++ b/style.css
@@ -9,21 +9,6 @@
   box-sizing: border-box;
 }
 
-input {
-  outline: none;
-  font: inherit;
-  border: solid 10px var(--col-secondary);
-  font-size: 200%;
-  width: 3em;
-  height: 3em;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  align-self: center;
-  text-align: center;
-  border-radius: 5px;
-}
-
 html,
 body,
 .screen {
@@ -33,12 +18,20 @@ body,
 
 body {
   font-family: sans-serif;
+  position: relative;
+  overflow: hidden;
 }
 
-.screen:not([hidden]) {
+.screen {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 1rem;
+  transition: transform 200ms;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: white;
 }
 
 #play-screen {
@@ -68,14 +61,6 @@ body {
   animation: blur-out 6s linear forwards;
 }
 
-svg {
-  fill: var(--col-primary);
-  transition: fill 100ms;
-  width: 80%;
-  height: auto;
-  align-self: end;
-}
-
 @keyframes skew-y-shaking{
  0% { transform: skewY(-15deg); }
  5% { transform: skewY(15deg); }
@@ -89,8 +74,13 @@ svg {
   animation: skew-y-shaking 500ms forwards;
 }
 
-.animate-error svg {
-  fill: red;
+.animate-error #char,
+.animate-error input {
+  background-color: red;
+}
+
+.slide-out {
+  transform: translateY(-100%);
 }
 
 @keyframes vertical-shaking {
@@ -105,33 +95,49 @@ svg {
   animation: vertical-shaking 300ms forwards;
 }
 
-.animate-success svg {
-  fill: green;
+.animate-success #char,
+.animate-success input {
+  background-color: green;
 }
 
-#points {
-  position: absolute;
-  right: 0;
-  top: 3rem;
-  font-size: 200%;
-  background-color: var(--col-secondary);
+#start-screen {
+  justify-content: center;
   padding: 2rem;
+  text-align: center;
+
+  background-size: 170;
+  transform: rotate(deg);
+  background-image: 
+    conic-gradient(from 160deg at 70px 168.5px, #FDC12D 0deg 90deg, transparent 90deg),
+    conic-gradient(from 21deg at 168px 71px, #FDC12D 0deg 90deg, transparent 90deg),
+    conic-gradient(from 21deg at 141px 141px, #FEEBAE 0deg 114deg, transparent 114deg),
+    conic-gradient(from -21deg at 96.5px 44px, #1483CA 0deg 131.5deg, transparent 131.5deg), 
+    conic-gradient(from -70deg at 43.5px 97px, #FDC12D 0deg 115.5deg, transparent 115.5deg), 
+    conic-gradient(from 134.5deg at 141px 141px, #1483CA 0deg 114.5deg, transparent 114deg),
+    conic-gradient(from 160deg at 43.5px 97px, #FEEBAE 0deg 130.5deg, transparent 120deg 360deg);
+  background-color: skyblue;
+  background-size: 195px 195px;
+  background-position: -30px -30px;
+  background-repeat: repeat, repeat;
+}
+
+p {
   color: white;
-  border-radius: 4rem 0 0 4rem;
+  font-size: 2rem;
+  text-shadow: 0 0px 10px grey;
+  padding: 0 5%;
+  text-align: center;
 }
 
 #start {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   font-size: 200%;
   background-color: var(--col-primary);
-  border: solid 3px lighten(var(--col-primary), 20%);
+  border: none;
   padding: 1rem 2rem;
   border-radius: 5px;
   color: white;
   text-transform: uppercase;
+  box-shadow: 0 0px 10px grey;
 }
 
 progress {
@@ -152,11 +158,83 @@ progress {
   /* background-color: var(--col-secondary); */
 }
 
+.points-wrapper {
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+}
+
+#points {
+  font-size: min(7vw,2rem);
+  background-color: var(--col-secondary);
+  padding: min(5vw,2rem);
+  color: white;
+  border-radius: 4rem 0 0 4rem;
+}
+
+.glasses-wrapper {
+  padding: 0 5%;
+}
+
+.glasses {
+  width: auto;
+  position: relative;
+  margin: 0 auto;
+  max-height: 50vh;
+  aspect-ratio: 1.44;
+}
+
+.glasses svg {
+  width: 100%;
+  height: auto;
+  fill: var(--col-primary);
+  transition: fill 100ms;
+}
+
+.left-eye {
+  border-radius: 50%;
+  position: absolute;
+  left: 4%;
+  bottom: 0;
+  overflow: hidden;
+  border: solid min(3vw,20px) var(--col-primary);
+  width: 41%;
+  aspect-ratio: 1;
+  display: flex;
+  align-items: center;
+}
+
 #char {
   font-family: 'Brush Script MT', cursive;
   filter: blur(20px);
+  width: 100%;
+  aspect-ratio: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: min(30vh, 30vw);
+  overflow: hidden;
 }
 
 #char.no-blur {
   filter: blur(0);
+}
+
+input {
+  position: absolute;
+  right: 4%;
+  bottom: 0;
+  border-radius: 50%;
+  border: solid min(3vw,20px) var(--col-primary);
+  outline: none;
+  font: inherit;
+  font-size: min(20vw, 6rem);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 41%;
+  aspect-ratio: 1;
+  background-color: transparent;
+  overflow: hidden;
 }
